tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Lead-AAAAAAAAAAAAAAAAAAAIlA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2196,
  "prerequisites": [
    2162,
    2168
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Lead will be necessary in large quantities once you start making nuclear reactors. You'll need a block of Lead for these. Breed them from Copper and Coal.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Lead",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2162,
    2168
  ],
  "rewards": [],
  "tasks": []
}
